--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:layout_marginEnd="138dp"
         android:layout_marginBottom="239dp"
         android:backgroundTint="#EEDC82"
-        android:text="Set Timer"
+        android:text="Set Timer 2025"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
